<resources>
    <string name="app_name">TaxiAndroid</string>
    <string name="error_location">Cant find curr location</string>
    <string name="label_ok">OK</string>

    <string name="splash_description">Все такси в одном месте</string>
    <string name="label_notification">Уведомления</string>
    <string name="label_share_app">Поделиться приложением</string>
    <string name="label_mark_app">Оценить приложение</string>
    <string name="label_feedback">Написать нам</string>

    <!--====================================================================-->
    <!-- Rationales -->

    <string name="rationale_location_permission">Для определения положения, разрешите доступ к локации</string>
    <string name="rationale_gps_is_off">Для определения положения, включите локацию</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main_taxi_screen">MainTaxiScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="label_settings_economy_title">Эконом</string>
    <string name="label_settings_economy_description">Недорогие поездки на каждый день</string>
    <string name="label_settings_child_title">Детское кресло</string>
    <string name="label_settings_child_description">Для детей от 3 до 12 лет</string>
    <string name="label_settings_comfort_title">Комфорт</string>
    <string name="label_settings_comfort_description">Комфортные тихие машины</string>
    <string name="label_settings_buisnes_title">Бизнес</string>
    <string name="label_settings_buisnes_description">Представительский класс</string>
    <string name="label_settings_miniven_title">Минивэн</string>
    <string name="label_settings_miniven_description">На 6–8 мест для больших компаний</string>

    <string name="label_to">Куда поедем?</string>
    <string name="label_from">Откуда поедем?</string>

</resources>
